...
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <Button
        android:id="@+id/uno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F38181"
        android:onClick="uno"
        android:text="1"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#D3866E"
        android:onClick="tres"
        android:text="3"
        app:layout_constraintBottom_toBottomOf="parent"
...
